Web Inspector: RTL: Docking Left doesn't constrain the page width https://bugs.webkit.org/show_bug.cgi?id=168862

Patch by Devin Rousso <dcrousso+webkit@gmail.com> on 2017-02-26
Reviewed by Brian Burg.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::inspectedViewFrameDidChange):
Calculate the inspectedViewFrame to be the remaining space after WebInspector is opened
instead of using the original page size.

Canonical link: https://commits.webkit.org/185886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213025 268f45cc-cd09-0410-ab3c-d52691b4dbfc